Removed API calls that cleaned up geocache zips (not checked during insertion) and states (now not present in the table).